# docs/contracts/openapi.yaml
@@ -26,7 +26,7 @@ tags:
 - name: Admin
 - name: Vendor
 paths:
-  /cemeteries:
+  /pemakaman:
     get:
       tags:
       - Directory
@@ -52,7 +52,7 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/CemeterySummary'
-  /cemeteries/{cemeteryId}:
+  /pemakaman/{cemeteryId}:
     get:
       tags:
       - Directory
